# gui-architectures-by-arjan-codes

./: README.md  pyproject.toml  simple.py
mvc/: controller.py  main.py  model.py  view.py
mvp/: main.py  presenter.py  view.py
mvvm/: view.ui  viewmodel.py
