[project]
name = "gui-architectures-by-arjan-codes"
version = "0.1.0"
description = "Repository to play with examples created and shown in YouTube video by Arjan Codes at https://www.youtube.com/watch?v=eHhXoCNCI1c"
authors = [
    {name = "Dickson Souza",email = "36424026+disouzam@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff (>=0.14.9,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
